test/integration/bad/tuples/incomplete6.stan
transformed data {
  tuple(real, int) x = (3.5, 4;
